--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=${POSTGRES_USERNAME:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:Derek}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
