"Loan Application Update"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/loanApplication
 spring.datasource.username=${POSTGRES_USERNAME:postgres}
