--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,15 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/loanApplication
-spring.datasource.username=${POSTGRES_USERNAME:postgres}
-spring.datasource.password=${POSTGRES_PASSWORD:Derek}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${GMAIL_USERNAME}
+spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
